--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
                     <h1 class="mb-4"><span style="color: #4B2E18 !important;">Kilimora Tour</span></h1>
 
                     <p class="mb-4">
-                        We are a well-established business founded in 2009 by Peter Robert (Managing Director) who
+                        We are a well-established business founded in 2009 by Benson Moshi (Managing Director) who
                         worked as a tour guide and driver before founding the company. We are locally owned and based in
                         Tanzania and Kenya.
                     </p>
@@ -459,7 +459,7 @@
                                 style="height: 250px; object-fit: cover;">
                         </div>
                         <div class="card-body p-4">
-                            <h5 class="mb-1">Peter</h5>
+                            <h5 class="mb-1">Benson Moshi</h5>
                             <p class="card-text small">As Director of Kilimora Tour, his goal is to make sure that
                                 tour guides deliver successfully. Peter enjoys the travel business as it allows him to
                                 share experiences, points of views and ideas.</p>
@@ -474,7 +474,7 @@
                                 style="height: 250px; object-fit: cover;">
                         </div>
                         <div class="card-body p-4">
-                            <h5 class="mb-1">Merlin</h5>
+                            <h5 class="mb-1">Benson Moshi</h5>
                             <p class="card-text small">Merlin handles sales. She loves the outdoors and a big fan of
                                 nature. She is loved by our guests for her attentiveness in dealing with customers, fast
                                 responses, and eagerness to help at all times.</p>
@@ -489,7 +489,7 @@
                                 style="height: 250px; object-fit: cover;">
                         </div>
                         <div class="card-body p-4">
-                            <h5 class="mb-1">Lidya</h5>
+                            <h5 class="mb-1">Benson Moshi</h5>
                             <p class="card-text small">Linda handles reservations. She is dedicated and loved by her
                                 clients and co-workers. She is very enthusiastic and engaging and goes out of her way to
                                 ensure that clients get the best safari experience.</p>
