--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/kilimora1.jpg"
-                            alt="Kilimora Safari" style="object-fit: cover;">
+                        <img class="img-fluid position-absolute w-100 h-100" src="img/nyumbu.jpg" alt="Kilimora Safari"
+                            style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
