--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 <!-- TANZANIA MIGRATION -->
                 <div class="col-lg-4 col-md-6 tour-card-item tanzania">
                     <div class="tour-card">
-                        <img src="img/kilimora3.jpg" class="tour-img" alt="Kilimora Safari Tour">
+                        <img src="img/tarangire.jpg" class="tour-img" alt="Kilimora Safari Tour">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
@@ -462,7 +462,7 @@
 
                 <div class="col-lg-4 col-md-6 tour-card-item tanzania">
                     <div class="tour-card">
-                        <img src="img/kilimora4.jpg" class="tour-img" alt="Kilimora Safari Tour">
+                        <img src="img/t2.jpg" class="tour-img" alt="Kilimora Safari Tour">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
@@ -733,7 +733,7 @@
             <div class="row align-items-center mb-5">
                 <!-- Left Images -->
                 <div class="col-lg-6 position-relative">
-                    <img src="img/kilimora5.jpg" class="img-fluid rounded main-img" alt="Kilimora Safari">
+                    <img src="img/chui9.jpg" class="img-fluid rounded main-img" alt="Kilimora Safari">
                     <img src="img/Nyumbu6.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
                 </div>
 
@@ -808,7 +808,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <!-- Right Images -->
                 <div class="col-lg-6 position-relative">
-                    <img src="img/kilimora3.jpg" class="img-fluid rounded main-img" alt="Kilimora Safari">
+                    <img src="img/tarangire.jpg" class="img-fluid rounded main-img" alt="Kilimora Safari">
                     <img src="img/tarangire.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
                 </div>
 
@@ -848,7 +848,7 @@
             <div class="row g-4 justify-content-center">
 
                 <div class="col-lg-6">
-                    <div class="experience-card large-card" style="background-image: url('img/kilimora1.jpg');">
+                    <div class="experience-card large-card" style="background-image: url('img/chui6.jpg');">
                         <div class="card-content">
                             <h3>Beaches</h3>
                             <p>Experience the allure of our meticulously selected beaches. With pristine sands and azure
@@ -1378,7 +1378,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/kilimora.jpg" alt="Kilimora Safari">
+                            <img class="img-fluid" src="img/pro1.jpg" alt="Kilimora Safari">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -1394,7 +1394,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/kilimora3.jpg" alt="Kilimora Safari">
+                            <img class="img-fluid" src="img/pro2.jpg" alt="Kilimora Safari">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -1410,7 +1410,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/kilimora4.jpg" alt="Kilimora Safari">
+                            <img class="img-fluid" src="img/pro3.jpg" alt="Kilimora Safari">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
