--- a/about.html
+++ b/about.html
@@ -317,30 +317,49 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">About Us</h6>
-                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Kilimora Tour</span></h1>
+                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">About Kilimora Adventure</span></h1>
+                    <h5 class="mb-3 text-primary">Where Passion Meets the Wild</h5>
 
                     <p class="mb-4">
-                        We are a well-established business founded in 2009 by Benson Moshi (Managing Director) who
-                        worked as a tour guide and driver before founding the company. We are locally owned and based in
-                        Tanzania and Kenya.
+                        Kilimora Adventure is an emerging premier tour operator based in the heart of Arusha, Tanzania.
+                        Founded in 2025, our story is rooted in a deep love for the African wilderness and a commitment
+                        to authentic exploration.
                     </p>
                     <p class="mb-4">
-                        We also operate our own fleet of vehicles and employ our own drivers and guides which makes our
-                        prices competitive as it eliminates commission to third parties. We have been voted consistently
-                        as a top safari operator after years of providing consistent reliable service to our guests.
-                    </p>
-
-                    <h5 class="mb-3 text-primary">Local Tanzanian Safari Expertise</h5>
-                    <p class="mb-4">
-                        Kilimora Tour has grown into one of Africaâ€™s premier safari operators. Our company combines a
-                        wealth of firsthand experience with an unwavering commitment to excellence, ensuring that every
-                        guest enjoys a truly unforgettable safari experience.
+                        The company was born from the combined vision of two dedicated founders: <strong>Franklin E.
+                            Moshi</strong>, a veteran tour guide and driver with more than 5 years of
+                        "boots-on-the-ground" experience, and <strong>Diana Thomas Mungure</strong>, who left a career
+                        in non-funded projects under USAID & CDC where she served for more than 10 years, to follow her
+                        true calling in tourism. Together, they turned their shared passion into a mission: to provide
+                        guests with more than just a tour, but a life-changing journey.
                     </p>
 
-                    <h5 class="mb-3 text-primary">Sustainability and Responsibility</h5>
+                    <h5 class="mb-3 text-primary">Why Journey With Us?</h5>
                     <p class="mb-4">
-                        We are committed to sustainable tourism practices that protect the environment and support local
-                        communities.
+                        Since our inception, we have grown into one of Africa's premier safari operators by staying true
+                        to our core values:
+                    </p>
+                    <ul class="mb-4">
+                        <li><strong>Expert Knowledge:</strong> Our guides are more than just drivers; they are
+                            storytellers and experts who bring Tanzania's breathtaking landscapes and wildlife to life.
+                        </li>
+                        <li><strong>Personalized Touch:</strong> From classic safaris to custom-designed luxury
+                            itineraries, we ensure every trip feels personal and meaningful.</li>
+                        <li><strong>Authentic Connections:</strong> We don't just show you the sights; we help you
+                            create genuine connections with the rich culture and natural beauty of Tanzania.</li>
+                    </ul>
+
+                    <h5 class="mb-3 text-primary">Our Vision</h5>
+                    <p class="mb-4">
+                        To become Tanzania's most trusted and innovative tour guide company, delivering authentic,
+                        sustainable, and unforgettable travel experiences that showcase the nation's natural beauty,
+                        rich wildlife, and vibrant cultural heritage to the world.
+                    </p>
+
+                    <h5 class="mb-3 text-primary">Our Mission</h5>
+                    <p class="mb-4">
+                        Our mission is to create memorable and responsible travel experiences in Tanzania through expert
+                        guiding, personalized service, and a deep respect for nature, culture, and local communities.
                     </p>
 
                     <a href="#" class="view-tours-link">
@@ -373,84 +392,77 @@
         <div class="container">
             <div class="mb-5">
                 <h2 class="fw-bold" style="font-size:42px;">
-                    <span style="border-left:5px solid #d4a017; padding-left:15px; color: #4B2E18 ;">Why Travel With
-                        Us?</span>
+                    <span style="border-left:5px solid #d4a017; padding-left:15px; color: #4B2E18 ;">Our Core
+                        Values</span>
                 </h2>
                 <p style="font-size:18px; max-width:650px; color:#4B2E18;">
-                    Discover authentic Africa with Kilimora Tour â€“ where every journey is
-                    crafted with passion and expertise.
+                    At Kilimora Adventure, our values shape every journey we create.
                 </p>
             </div>
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-history text-primary fa-2x me-3"></i>
-                            <h5 class="fw-bold mb-0">Well-Established</h5>
+                            <i class="fa fa-handshake text-primary fa-2x me-3"></i>
+                            <h5 class="fw-bold mb-0">Integrity & Trust</h5>
                         </div>
                         <p class="mb-0">
-                            We are a well-established business founded in 2009 by Peter Robert [Managing Director] who
-                            worked as a tour guide.
+                            We operate with honesty, transparency, and professionalism in all our interactions.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-users text-primary fa-2x me-3"></i>
-                            <h5 class="fw-bold mb-0">Locally Owned</h5>
+                            <i class="fa fa-star text-primary fa-2x me-3"></i>
+                            <h5 class="fw-bold mb-0">Excellence in Service</h5>
                         </div>
                         <p class="mb-0">
-                            We are locally owned and based in Tanzania. We employ 100% Tanzanians for all your
-                            ground-services.
+                            We deliver high-quality, well-planned, and unforgettable travel experiences.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-truck-monster text-primary fa-2x me-3"></i>
-                            <h5 class="fw-bold mb-0">Self-Operated Fleet</h5>
+                            <i class="fa fa-leaf text-primary fa-2x me-3"></i>
+                            <h5 class="fw-bold mb-0">Sustainability & Conservation</h5>
                         </div>
                         <p class="mb-0">
-                            Our competitive pricing is due to operating our own fleet with in-house drivers and guides,
-                            eliminating third-party commissions.
+                            We promote responsible tourism that protects wildlife and natural ecosystems.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-headset text-primary fa-2x me-3"></i>
-                            <h5 class="fw-bold mb-0">24/7 Customer Service</h5>
+                            <i class="fa fa-globe text-primary fa-2x me-3"></i>
+                            <h5 class="fw-bold mb-0">Cultural Respect & Authenticity</h5>
                         </div>
                         <p class="mb-0">
-                            We provide 24/7 customer service support. We provide briefing upon arrival and ensure you
-                            are well taken care of until departure.
+                            We celebrate Tanzania's cultures through genuine and respectful experiences.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-award text-primary fa-2x me-3"></i>
-                            <h5 class="fw-bold mb-0">Acclaimed Recognition</h5>
+                            <i class="fa fa-user-check text-primary fa-2x me-3"></i>
+                            <h5 class="fw-bold mb-0">Customer-Centered Approach</h5>
                         </div>
                         <p class="mb-0">
-                            Awarded the Certificate of Excellence since 2015 and winners of the World Travel Awards
-                            among others.
+                            We design personalized adventures tailored to each traveler's unique preferences.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-globe-africa text-primary fa-2x me-3"></i>
-                            <h5 class="fw-bold mb-0">Wide Range of Tours</h5>
+                            <i class="fa fa-hands-helping text-primary fa-2x me-3"></i>
+                            <h5 class="fw-bold mb-0">Community Empowerment</h5>
                         </div>
                         <p class="mb-0">
-                            Offering safari tours, including wedding packages, Kilimanjaro climbs, Zanzibar holidays,
-                            and Great Migration adventures.
+                            We support local communities by working with local guides and businesses.
                         </p>
                     </div>
                 </div>
@@ -464,20 +476,25 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">Our Services
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">Our Objectives
                     </h6>
-                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Kilimora Tour distinguishes
-                            itself</span></h1>
-                    <p class="mb-4">
-                        With a fleet of over 50 self-owned vehicles, including 5 to 7-seater custom safari Land Cruisers
-                        featuring pop-up roofs for optimal game viewing. Our commitment to comfort and safety is evident
-                        in the meticulous maintenance of each vehicle.
-                    </p>
-                    <p class="mb-4">
-                        We are pioneers in offering hot lunches during your safari, featuring a comprehensive meal with
-                        soup, a starter, main course, dessert, and a variety of beverages, all served under a canopy.
-                        Buffet meals are provided in camps and lodges, and we accommodate all dietary needs.
-                    </p>
+                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Driven by Excellence &
+                            Responsibility</span></h1>
+                    <ul class="mb-4">
+                        <li class="mb-3">Delivering safe, reliable, and expertly guided tours across Tanzania's most
+                            iconic destinations, including national parks, cultural heritage sites, and adventure
+                            locations.</li>
+                        <li class="mb-3">Building a strong and trusted brand recognized for professionalism, innovation,
+                            and exceptional customer experiences within the tourism industry.</li>
+                        <li class="mb-3">Promoting sustainable and responsible tourism practices that preserve wildlife,
+                            natural ecosystems, and cultural heritage.</li>
+                        <li class="mb-3">Creating long-lasting partnerships with clients, travel agencies, and
+                            hospitality providers both locally and internationally.</li>
+                        <li class="mb-3">Continuously enhancing service quality through staff training, innovation, and
+                            customer feedback.</li>
+                        <li class="mb-3">Making a positive impact on local communities by supporting responsible tourism
+                            and community-based initiatives.</li>
+                    </ul>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="position-relative h-100">
@@ -499,17 +516,32 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title bg-white text-start pe-3" style="color:#d4a017 !important;">Experience</h6>
-                    <h1 class="mb-4">Kilimora Tour: At Your Service</h1>
-                    <p class="mb-4">Welcome to Kilimora Tour! We are a powerhouse team of dedicated sales
-                        professionals, customer service experts, and passionate employees, united by a shared goal:
-                        showcasing the beauty and wonders of Tanzania and Africa to the world. With our unwavering
-                        commitment to hospitality and personalized experiences, we're here to ensure your journey with
-                        us is nothing short of extraordinary.</p>
-                    <p class="mb-4">While some of our team members are based in Denmark, China, the USA, Philippines,
-                        and other parts of the world, here we share with you the kind faces of our Tanzania team.
-                        They're ready to welcome you with open arms and provide the unforgettable service that defines
-                        the spirit of Kilimora Tour.</p>
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#d4a017 !important;">Service
+                        Standards</h6>
+                    <h1 class="mb-4">Our Commitment to Excellence</h1>
+                    <p class="mb-4">At Kilimora Adventure, our service standards define our commitment to excellence,
+                        safety, and responsible tourism. We strive to deliver exceptional travel experiences by
+                        upholding the following principles:</p>
+                    <ul class="mb-4">
+                        <li class="mb-2"><strong>Professional & Licensed Guides:</strong> Our tours are led by highly
+                            trained, knowledgeable, and fully licensed guides who are customer-focused and passionate
+                            about delivering enriching experiences.</li>
+                        <li class="mb-2"><strong>Safety as a Top Priority:</strong> We adhere strictly to established
+                            safety procedures and internationally recognized tourism standards to ensure the well-being
+                            of our clients at all times.</li>
+                        <li class="mb-2"><strong>Personalized Travel Experiences:</strong> Every journey is thoughtfully
+                            customized to reflect our clients' interests, budgets, and preferred travel styles, ensuring
+                            a unique and memorable experience.</li>
+                        <li class="mb-2"><strong>Reliability & Punctuality:</strong> We provide consistent and
+                            dependable service, maintaining professionalism and timeliness from the booking process
+                            through the completion of each tour.</li>
+                        <li class="mb-2"><strong>Clear & Transparent Communication:</strong> We ensure honest pricing,
+                            accurate travel information, and responsive customer support to build trust and confidence
+                            with our clients.</li>
+                        <li class="mb-2"><strong>Sustainable & Ethical Tourism Practices:</strong> Our operations
+                            prioritize environmental responsibility, wildlife conservation, and ethical engagement with
+                            local communities.</li>
+                    </ul>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="position-relative h-100">
