--- a/index.html
+++ b/index.html
@@ -366,19 +366,23 @@
 
                     <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">About </h6>
 
-                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Kilimora Tour</span></h1>
+                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">About Kilimora Adventure</span></h1>
+                    <h6 class="mb-3" style="color: #d4a017 !important; font-weight: bold;">Where Passion Meets the Wild
+                    </h6>
 
-                    <p class="mb-4">We are well-established business founded in 2009 by Peter Robert (Managing Director)
-                        who worked as a tour guide and driver before founding the company. We are locally owned and
-                        based in Tanzania and Kenya. We also operate our own fleet of vehicles and employ our own
-                        drivers and guides which makes our prices competetive as it eliminates commission to third
-                        parties. We have been voted
-                        consistently as a top safari operator after years of providing consistent reliable service to
-                        our guests.</p>
+                    <p class="mb-4">Kilimora Adventure is an emerging premier tour operator based in the heart of
+                        Arusha, Tanzania. Founded in 2025, our story is rooted in a deep love for the African wilderness
+                        and a commitment to authentic exploration.</p>
+                    <p class="mb-4">The company was born from the combined vision of two dedicated founders:
+                        <strong>Franklin E. Moshi</strong>, a veteran tour guide and driver with more than 5 years of
+                        "boots-on-the-ground" experience, and <strong>Diana Thomas Mungure</strong>, who left a career
+                        in non-funded projects under USAID & CDC where she served for more than 10 years, to follow her
+                        true calling in tourism. Together, they turned their shared passion into a mission: to provide
+                        guests with more than just a tour, but a life-changing journey.</p>
 
 
 
-                    <a href="#" class="view-tours-link">
+                    <a href="about.html" class="view-tours-link">
                         <span class="arrow">→</span>READ MORE
                     </a>
                     <div class="view-tours-underline"></div>
