--- a/index.html
+++ b/index.html
@@ -378,7 +378,8 @@
                         "boots-on-the-ground" experience, and <strong>Diana Thomas Mungure</strong>, who left a career
                         in non-funded projects under USAID & CDC where she served for more than 10 years, to follow her
                         true calling in tourism. Together, they turned their shared passion into a mission: to provide
-                        guests with more than just a tour, but a life-changing journey.</p>
+                        guests with more than just a tour, but a life-changing journey.
+                    </p>
 
 
 
@@ -1052,11 +1053,11 @@
             <!-- Section Title -->
             <div class="mb-5">
                 <h2 class="fw-bold" style="font-size:42px;">
-                    <span style="border-left:5px solid #d4a017; padding-left:15px;">Why Travel With Us?</span>
+                    <span style="border-left:5px solid #d4a017; padding-left:15px;">Why Journey With Us?</span>
                 </h2>
                 <p style="font-size:18px; max-width:650px; color:#333;">
-                    Discover authentic Africa with Gosheni Safaris – where every journey is
-                    crafted with passion and expertise.
+                    Since our inception, we have grown into one of Africa's premier safari operators by staying true to
+                    our core values:
                 </p>
             </div>
 
@@ -1067,13 +1068,13 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="d-flex">
                         <div style="font-size:36px; margin-right:15px;">
-                            <i class="fa fa-user-tie"></i>
+                            <i class="fa fa-book-reader"></i>
                         </div>
                         <div>
-                            <h5 class="fw-bold mb-1">Professional Guide</h5>
+                            <h5 class="fw-bold mb-1">Expert Knowledge</h5>
                             <p class="mb-0">
-                                Embark on a seamless adventure with our knowledgeable and professional guides,
-                                ensuring an enriching travel experience.
+                                Our guides are more than just drivers; they are storytellers and experts who bring
+                                Tanzania's breathtaking landscapes and wildlife to life.
                             </p>
                         </div>
                     </div>
@@ -1083,13 +1084,13 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="d-flex">
                         <div style="font-size:36px; margin-right:15px;">
-                            <i class="fa fa-language"></i>
+                            <i class="fa fa-heart"></i>
                         </div>
                         <div>
-                            <h5 class="fw-bold mb-1">Local Expertise</h5>
+                            <h5 class="fw-bold mb-1">Personalized Touch</h5>
                             <p class="mb-0">
-                                As a local company, we offer an authentic perspective, unlocking hidden gems and
-                                cultural insights for a truly immersive journey.
+                                From classic safaris to custom-designed luxury itineraries, we ensure every trip feels
+                                personal and meaningful.
                             </p>
                         </div>
                     </div>
@@ -1099,13 +1100,13 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="d-flex">
                         <div style="font-size:36px; margin-right:15px;">
-                            <i class="fa fa-truck-monster"></i>
+                            <i class="fa fa-users"></i>
                         </div>
                         <div>
-                            <h5 class="fw-bold mb-1">Exclusive Vehicles</h5>
+                            <h5 class="fw-bold mb-1">Authentic Connections</h5>
                             <p class="mb-0">
-                                Travel in comfort and style with our dedicated vehicles, providing flexibility
-                                and convenience throughout your exploration.
+                                We don't just show you the sights; we help you create genuine connections with the rich
+                                culture and natural beauty of Tanzania.
                             </p>
                         </div>
                     </div>
